FullQa New/src/objects/Managed_Returns_Services__c.object
<CustomObject>
    <description>Used by the EMEA team to track VAT Registrations</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Registrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country_of_Establishment__c</fullName>
        <description>Pulls the Country from the associated Account - Used for EMEA tracking of registrations.
Colin Matthews Jira ticket SFCOM-5357</description>
        <formula>Account__r.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country of Establishment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Billed__c</fullName>
        <label>Date Billed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description_of_Activity__c</fullName>
        <description>EMEA tracking field to describe the company&apos;s activities
Colin Matthews Jira ticket SFCOM-5357</description>
        <label>Description of Activity</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Registrataion_Doc_Received_Client__c</fullName>
        <label>Registrataion Doc Received Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Agent__c</fullName>
        <label>Registration Agent</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avalara Brighton</fullName>
                </value>
                <value>
                    <fullName>Grimbergen</fullName>
                </value>
                <value>
                    <fullName>Peisner Johnson</fullName>
                </value>
                <value>
                    <fullName>Taxand</fullName>
                </value>
                <value>
                    <fullName>TMF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Business_Type__c</fullName>
        <label>Registration Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B Digital Services</fullName>
                </value>
                <value>
                    <fullName>B2B Goods</fullName>
                </value>
                <value>
                    <fullName>B2B Services</fullName>
                </value>
                <value>
                    <fullName>B2C Digital Services</fullName>
                </value>
                <value>
                    <fullName>B2C Goods</fullName>
                </value>
                <value>
                    <fullName>B2C Services</fullName>
                </value>
                <value>
                    <fullName>Distance Seller</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Country__c</fullName>
        <label>Registration Country</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Ireland (MOSS)</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Netherlands</fullName>
                </value>
                <value>
                    <fullName>Norway VoES</fullName>
                </value>
                <value>
                    <fullName>Poland</fullName>
                </value>
                <value>
                    <fullName>South Africa</fullName>
                </value>
                <value>
                    <fullName>South Korea</fullName>
                </value>
                <value>
                    <fullName>Spain</fullName>
                </value>
                <value>
                    <fullName>Sweden</fullName>
                </value>
                <value>
                    <fullName>Switzerland</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>UK (MOSS)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Doc_Sent_Client__c</fullName>
        <label>Registration Doc Sent Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Doc_Sent_Local_Office__c</fullName>
        <label>Registration Doc Sent Local Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Doc_Sent_Tax_Office__c</fullName>
        <label>Registration Doc Sent Tax Office</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Registration_Notes__c</fullName>
        <label>Registration Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Registration_Status__c</fullName>
        <label>Registration Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Registered</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registration_Type__c</fullName>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Registration</fullName>
                </value>
                <value>
                    <fullName>Registration Only</fullName>
                </value>
                <value>
                    <fullName>Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Managed Returns Services</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Managed Returns Service</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Managed Returns Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>